# inventory-system

./: .gitignore  Cargo.toml  LICENSE  README.md
src/haskell-logic/: Main.hs  Stock.hs  Sync.hs
src/rust-core/: consensus.rs  main.rs  network.rs  storage.rs
