[package]
name = "inventory-system"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
raft = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
protobuf = { version = "2.28.0", features = ["bytes"] }

[[bin]]
name = "inventory-system"
path = "src/rust-core/main.rs"